# HiveSim

./: .gitignore  README.md  pyproject.toml  runsim.py
examples/: README.md  simple_game.py
game_logs/: last_game.json
notebooks/: initialinvestigations.ipynb
src/: coordinates.py  hex.py  robots.py  visualization.py
src/hivesim/: Gamelogging.py  game.py  robots.py  runsim.py  visualization.py
tests/: test_board_states.py  test_game_pieces.py  test_hex_coordinate.py  test_hive_connectivity_bug.py  test_movement_rules.py
