[project]
name = "hivesim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
